--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "capacitor-liveramp",
-  "version": "0.0.0",
+  "version": "0.0.1-0",
   "description": "LiveRamp ATS and eCST",
   "main": "dist/plugin.cjs.js",
   "module": "dist/esm/index.js",
